# TextProcessing

./: .gitignore  README.md  main.py  pyproject.toml
code/: cleaning_normalization.ipynb  tokenization.ipynb  vectorization.ipynb
